gccida/c0/output_fix_trunc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_fix_trunc/src/i386.c:7029:9: error: use of undeclared identifier 'arg0'
return &arg0; 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_fix_trunc/src/obj/i386.o] Error 1
